--- a/spec.yaml
+++ b/spec.yaml
@@ -1,12 +1,12 @@
-openapi: 3.0.0 
+openapi: 3.0.0
 info:
-  title: Spaghetti Cooking API test simon
+  title: Rocket flying API
   version: 1.0.0
   description: API for cooking spaghetti
 servers:
   - url: https://api.example.com
 paths:
-  /cookSpaghetti:
+  /flyrocket:
     post:
       summary: Cook spaghetti
       requestBody:
@@ -49,3 +49,4 @@ paths:
           description: Bad request
         500:
           description: Internal server error
+
